# real-fast

./: Cargo.toml  Makefile.toml  README.md
src/: checks.rs  main.rs  state.rs
src/commands/: emoji.rs  help.rs  math.rs  mod.rs  roles.rs  util.rs
src/commands/music/: consts.rs  deafen.rs  join.rs  leave.rs  mod.rs  mute.rs  play.rs  queue.rs  skip.rs  unmute.rs
src/util/: checks.rs
