[package]
name = "real-fast"
version = "0.9.0"
authors = ["Spencer Vess <spencervess@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio = { version = "0.2", features = ["macros", "signal"] }
reqwest = { version = "0.10", features = ["rustls-tls"], default-features = false }
base64 = "0.13"
bytes = "0.5"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
rev = "9dfba84a570b27c4bb5cbf93bafcbdb5694cfd80"
features = ["collector"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/serenity"
rev = "9dfba84a570b27c4bb5cbf93bafcbdb5694cfd80"
